// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AnnotationToolbar > renders the default state (pointer active, undo+redo disabled, Saved indicator) 1`] = `
<div
  class="flex items-center gap-1 rounded-md border bg-background px-2 py-1 shadow-sm"
>
  <button
    class="rounded px-2 py-1 text-sm font-medium transition-colors bg-primary text-primary-foreground"
    title="Select"
  >
    △
  </button>
  <button
    class="rounded px-2 py-1 text-sm font-medium transition-colors hover:bg-muted"
    title="Pen"
  >
    ✎
  </button>
  <button
    class="rounded px-2 py-1 text-sm font-medium transition-colors hover:bg-muted"
    title="Arrow"
  >
    →
  </button>
  <button
    class="rounded px-2 py-1 text-sm font-medium transition-colors hover:bg-muted"
    title="Rectangle"
  >
    □
  </button>
  <button
    class="rounded px-2 py-1 text-sm font-medium transition-colors hover:bg-muted"
    title="Ellipse"
  >
    ○
  </button>
  <button
    class="rounded px-2 py-1 text-sm font-medium transition-colors hover:bg-muted"
    title="Text"
  >
    T
  </button>
  <button
    class="rounded px-2 py-1 text-sm font-medium transition-colors hover:bg-muted"
    title="Highlight"
  >
    █
  </button>
  <span
    class="mx-1 h-5 border-r"
  />
  <div
    class="flex items-center gap-1"
  >
    <button
      class="h-5 w-5 rounded-full border-2 transition-transform scale-125 border-primary"
      style="background-color: rgb(239, 68, 68);"
      title="#ef4444"
    />
    <button
      class="h-5 w-5 rounded-full border-2 transition-transform border-transparent hover:scale-110"
      style="background-color: rgb(245, 158, 11);"
      title="#f59e0b"
    />
    <button
      class="h-5 w-5 rounded-full border-2 transition-transform border-transparent hover:scale-110"
      style="background-color: rgb(34, 197, 94);"
      title="#22c55e"
    />
    <button
      class="h-5 w-5 rounded-full border-2 transition-transform border-transparent hover:scale-110"
      style="background-color: rgb(59, 130, 246);"
      title="#3b82f6"
    />
    <button
      class="h-5 w-5 rounded-full border-2 transition-transform border-transparent hover:scale-110"
      style="background-color: rgb(139, 92, 246);"
      title="#8b5cf6"
    />
    <button
      class="h-5 w-5 rounded-full border-2 transition-transform border-transparent hover:scale-110"
      style="background-color: rgb(0, 0, 0);"
      title="#000000"
    />
    <button
      class="h-5 w-5 rounded-full border-2 transition-transform border-transparent hover:scale-110"
      style="background-color: rgb(255, 255, 255);"
      title="#ffffff"
    />
    <input
      class="ml-1 h-5 w-5 cursor-pointer rounded border-0 p-0"
      title="Custom color"
      type="color"
      value="#ef4444"
    />
  </div>
  <span
    class="mx-1 h-5 border-r"
  />
  <button
    class="rounded px-2 py-1 text-sm hover:bg-muted disabled:opacity-40"
    disabled=""
    title="Undo"
  >
    Undo
  </button>
  <button
    class="rounded px-2 py-1 text-sm hover:bg-muted disabled:opacity-40"
    disabled=""
    title="Redo"
  >
    Redo
  </button>
  <span
    class="mx-1 h-5 border-r"
  />
  <span
    class="text-xs text-muted-foreground"
  >
    Saved
  </span>
</div>
`;

exports[`AnnotationToolbar > renders with the pen tool active + Saving... indicator 1`] = `
<div
  class="flex items-center gap-1 rounded-md border bg-background px-2 py-1 shadow-sm"
>
  <button
    class="rounded px-2 py-1 text-sm font-medium transition-colors hover:bg-muted"
    title="Select"
  >
    △
  </button>
  <button
    class="rounded px-2 py-1 text-sm font-medium transition-colors bg-primary text-primary-foreground"
    title="Pen"
  >
    ✎
  </button>
  <button
    class="rounded px-2 py-1 text-sm font-medium transition-colors hover:bg-muted"
    title="Arrow"
  >
    →
  </button>
  <button
    class="rounded px-2 py-1 text-sm font-medium transition-colors hover:bg-muted"
    title="Rectangle"
  >
    □
  </button>
  <button
    class="rounded px-2 py-1 text-sm font-medium transition-colors hover:bg-muted"
    title="Ellipse"
  >
    ○
  </button>
  <button
    class="rounded px-2 py-1 text-sm font-medium transition-colors hover:bg-muted"
    title="Text"
  >
    T
  </button>
  <button
    class="rounded px-2 py-1 text-sm font-medium transition-colors hover:bg-muted"
    title="Highlight"
  >
    █
  </button>
  <span
    class="mx-1 h-5 border-r"
  />
  <div
    class="flex items-center gap-1"
  >
    <button
      class="h-5 w-5 rounded-full border-2 transition-transform scale-125 border-primary"
      style="background-color: rgb(239, 68, 68);"
      title="#ef4444"
    />
    <button
      class="h-5 w-5 rounded-full border-2 transition-transform border-transparent hover:scale-110"
      style="background-color: rgb(245, 158, 11);"
      title="#f59e0b"
    />
    <button
      class="h-5 w-5 rounded-full border-2 transition-transform border-transparent hover:scale-110"
      style="background-color: rgb(34, 197, 94);"
      title="#22c55e"
    />
    <button
      class="h-5 w-5 rounded-full border-2 transition-transform border-transparent hover:scale-110"
      style="background-color: rgb(59, 130, 246);"
      title="#3b82f6"
    />
    <button
      class="h-5 w-5 rounded-full border-2 transition-transform border-transparent hover:scale-110"
      style="background-color: rgb(139, 92, 246);"
      title="#8b5cf6"
    />
    <button
      class="h-5 w-5 rounded-full border-2 transition-transform border-transparent hover:scale-110"
      style="background-color: rgb(0, 0, 0);"
      title="#000000"
    />
    <button
      class="h-5 w-5 rounded-full border-2 transition-transform border-transparent hover:scale-110"
      style="background-color: rgb(255, 255, 255);"
      title="#ffffff"
    />
    <input
      class="ml-1 h-5 w-5 cursor-pointer rounded border-0 p-0"
      title="Custom color"
      type="color"
      value="#ef4444"
    />
  </div>
  <span
    class="mx-1 h-5 border-r"
  />
  <button
    class="rounded px-2 py-1 text-sm hover:bg-muted disabled:opacity-40"
    disabled=""
    title="Undo"
  >
    Undo
  </button>
  <button
    class="rounded px-2 py-1 text-sm hover:bg-muted disabled:opacity-40"
    disabled=""
    title="Redo"
  >
    Redo
  </button>
  <span
    class="mx-1 h-5 border-r"
  />
  <span
    class="text-xs text-muted-foreground"
  >
    Saving...
  </span>
</div>
`;
